tests/NormalTests/paczka1/fuzzy1/75907493.err
Error in line 18: SKZGd7wgd A48 52,07
Error in line 10: SKZGd7wgd S253 319,2
